Sat 23 Jun 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Create build script (BuildAndRun.ps1)
	* Initial commit ;)