@@ -1,3 +1,7 @@
+Thu 12 Jul 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Update Build.ps1 to take parameters and a switch
+	* Rename BuildAndRun.ps1 as Build.ps1
+
 Sat 23 Jun 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Create build script (BuildAndRun.ps1)
 	* Initial commit ;)
